deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oblivious
  labels:
    name: oblivious
